--- a/index_list.html
+++ b/index_list.html
@@ -475,11 +475,12 @@
                         <td></td>
                         <td>(視障網)借閱證(會員)／留言版管理</td>
                         <td>
+                            <p style="color:red;">註：12/9更新留言版，並必須擴充留言類型</p>
                             <ul>
                                 <li>會員清單 <a href="tpmlblind_memberlist.htm" target="_blank"></a></li>
                                 <li>會員編輯 <a href="tpmlblind_memberEdit.htm" target="_blank"></a></li>
                                 <li>留言清單 <a href="tpmlblind_messagelist.htm" target="_blank"></a></li>
-                                <li>留言編輯 <a href="tpmlblind_messageEdit.htm" target="_blank"></a></li>
+                                <li>留言編輯 <a href="tpmlblind_messageEdit.htm" target="_blank"></a>｜預覽留言 <a href="fancybox_messagePreview.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
