--- a/tpmlblind_memberEdit.htm
+++ b/tpmlblind_memberEdit.htm
@@ -200,7 +200,7 @@
                                             <!-- item = 1 file -->
                                             <div class="item">
                                                 <div class="pic">
-                                                    <a href="images/pic01.jpg" target="_blank"><img src="images/pic01.jpg" alt=""></a>
+                                                    <a href="images/pic01.jpg" target="_blank" title="另開顯示原圖"><img src="images/pic01.jpg" alt="手冊正面檔案"></a>
                                                 </div>
                                                 <div class="flex-form">
                                                     <div class="file_title">手冊正面檔案</div>
@@ -214,7 +214,7 @@
                                             <!-- item = 1 file -->
                                             <div class="item">
                                                 <div class="pic">
-                                                    <a href="images/pic01.jpg" target="_blank"><img src="images/pic01.jpg" alt=""></a>
+                                                    <a href="images/pic01.jpg" target="_blank" title="另開顯示原圖"><img src="images/pic01.jpg" alt="手冊反面檔案"></a>
                                                 </div>
                                                 <div class="flex-form">
                                                     <div class="file_title">手冊反面檔案</div>
@@ -258,8 +258,8 @@
                                             <div class="help">審核通過後，會員資訊將推送到自動化系統註冊閱讀證會員。後續編修會員資訊或密碼，請至自動化系統編修。</div>
                                         </div>
                                         <div class="btn_grp">
-											<button class="btn btn-orange">編修儲存</button>
-											<button class="btn">取消編修</button>
+											<button class="btn btn-orange" title="儲存">編修儲存</button>
+											<button class="btn" title="取消">取消編修</button>
                                         </div>
                                     </div>
                                 </div>
